add reservations page and users reducer
